maybe flickering has stopped?

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -95,7 +95,7 @@ textarea:focus {
   border-width: 3px;
   border-image: var(--gradient-image) 8 stretch;
   -webkit-border-image: var(--gradient-image) 8 stretch;
-  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transform-style: preserve-3d;
   font-family: 'HK Grotesk Bold';
   text-decoration: none;
   color: white;
@@ -111,6 +111,7 @@ textarea:focus {
   bottom: -3px;
   left: -3px;
   border-image: var(--gradient-image) 8 fill;
+  -webkit-transform-style: preserve-3d;
   opacity: 0;
   z-index: -1;
   transition: 0.3s all;
@@ -122,23 +123,7 @@ textarea:focus {
 }
 .button:hover:before,
 .button:active:before {
-  -webkit-border-image: var(--gradient-image) 8 fill;
-  -webkit-transform: translate3d(0, 0, 0);
   opacity: 1;
-}
-/* Chrome 29+ */
-@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
-  .button:hover:before,
-  .button:active:before {
-    inset: 0;
-  }
-}
-/* Chrome 22-28 */
-@media screen and(-webkit-min-device-pixel-ratio:0) {
-  .button:hover:before,
-  .button:active:before {
-    inset: 0;
-  }
 }
 
 /* Section Title */
